5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1671_1103.log
== TEST (2019-04-24 15:26:28) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x<=b):
	print(x,"pertence ao interalo",a","b)
else:
	print(x,"nao perternce ao intervalo",a","b)
-- ERROR:
File "XXXX", line 7
    print(x,"pertence ao interalo",a","b)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:03) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x<=b):
	print(x,"pertence ao intervalo",a","b)
else:
	print(x,"nao perternce ao intervalo",a","b)
-- ERROR:
File "XXXX", line 7
    print(x,"pertence ao intervalo",a","b)
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:27:10) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x<=b):
	print(x,"pertence ao intervalo",a","b)
else:
	print(x,"nao perternce ao intervalo",a","b)
-- EXECUTION TIME:
0.187227
-- ERROR:
  File "/home/codebench/codes/1671/1103/main.py", line 7
    print(x,"pertence ao intervalo",a","b)
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:11) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x<=b):
	print(x,"pertence ao intervalo",a","b)
else:
	print(x,"nao perternce ao intervalo",a","b)
-- ERROR:
File "XXXX", line 7
    print(x,"pertence ao intervalo",a","b)
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:27:38) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a","b)
else:
	print(x,"nao perternce ao intervalo",a","b)
-- ERROR:
File "XXXX", line 7
    print(x,"pertence ao intervalo",a","b)
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:28:40) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao perternce ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao perternce ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:28:58) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao perternce ao intervalo",a,",",b)
-- EXECUTION TIME:
0.165971
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao perternce ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao perternce ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:29:23) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao perternce ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao perternce ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:30:35) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao perternce ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao perternce ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:31:03) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao perternce ao intervalo",a,",",b)
-- EXECUTION TIME:
0.134396
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao perternce ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao perternce ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:31:12) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.199035
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:31:56) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.195234
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:31:56) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:31:57) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.176141
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
numero: numero: numero: Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:31:57) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.33162
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 1.1 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
numero: numero: numero: Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:31:57) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.349682
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
numero: numero: numero: Entradas 6.5 e 1.1 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:32:24) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:32:51) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:32:59) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.237883
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:36:52) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:37:15) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:37:29) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:37:47) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))
if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.135035
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:39:04) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))

if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.220656
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
4.0 nao pertence ao intervalo 2.0 , 3.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
3.5 nao pertence ao intervalo 5.5 , 6.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Entradas 6.5 e 1.1 invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:39:15) 
-- CODE:
a=float(input("numero: "))
b=float(input("numero: "))
x=float(input("numero: "))

if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- OUTPUT:
4.0 nao pertence ao intervalo 2.0 , 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:40:05) 
-- CODE:
x=float(input("numero: "))
a=float(input("numero: "))
b=float(input("numero: "))

if(b<=a):
	print("Entradas",a,"e",b,"invalidas")
elif(a<=x)and(x<=b):
	print(x,"pertence ao intervalo",a,",",b)
else:
	print(x,"nao pertence ao intervalo",a,",",b)
-- EXECUTION TIME:
0.276809
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
